--- a/gallery.html
+++ b/gallery.html
@@ -47,6 +47,9 @@
                 </div>
             </div>
         </section>
+        <footer>
+            <p>الصفحة الشخصية مسجلة باسم أيوب عبدالرحمن ياسين   &copy;2021</p>
+        </footer>
         <script src="./assets/jquery/jquery-3.1.1.min.js"></script>
         <script src="./js/index.js"></script>
     </body>
